--- a/views/create_order_details.hbs
+++ b/views/create_order_details.hbs
@@ -1,6 +1,6 @@
 {{#extends "base"}}
   {{#block "content"}}
-    <h1>Create Order Details</h1>
+    <h1>Create Order Detail</h1>
     <form method="POST">
       <label>Order ID</label>
       <input type="text" name="order_id" class="form-control mb-3" />
