Added nav bar and links, as well as buttons on some pages for better ux

--- a/views/create_order.hbs
+++ b/views/create_order.hbs
@@ -6,8 +6,8 @@
     <form method="POST">
       <label>Customer ID</label>
       <input type="text" name="user_id" class="form-control mb-3" />
-      <p class="small text-muted">After creating this order, please create order
-        details in the Order Details form.</p>
+      <p class="small text-muted">After creating this order, please add
+        <a href="/order_details/create">order details</a>.</p>
       <input type="submit" class="btn btn-primary" value="Create Order" />
     </form>
 
