--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -8,8 +8,51 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>CompuShop | Orders Database</title>
   </head>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/order_details"><p class="display-6">
+          CompuShop</p></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/orders"
+            >Orders</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/order_details"
+            >Order Details</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/products"
+            >Products</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
   <body>
     <div class="container">
       {{#block "content"}}{{/block}}
@@ -21,4 +64,5 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <footer></footer>
 </html>
