--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,15 +1,17 @@
 {{#extends "base"}}
   {{#block "content"}}
-    <h1>Products</h1>
+    <h2>Products</h2>
 
     <table class="table">
       <tr>
+        <th>Product ID</th>
         <th>Name</th>
         <th>Price</th>
       </tr>
 
       {{#each products}}
         <tr>
+          <td>{{product_id}}</td>
           <td>{{name}}</td>
           <td>{{price}}</td>
         </tr>
