Added footer and added to data.sql

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -10,7 +10,7 @@
     />
     <title>CompuShop | Orders Database</title>
   </head>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="mb-4 navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/order_details"><p class="display-6">
           CompuShop</p></a>
@@ -64,5 +64,86 @@
       crossorigin="anonymous"
     ></script>
   </body>
-  <footer></footer>
+
+  <!-- Footer -->
+  <footer
+    class="container-fluid mt-5 text-center text-lg-start text-dark"
+    style="background-color: #ECEFF1"
+  >
+    <!-- Section: Social media -->
+    <section class="d-flex justify-content-between text-white">
+      <!-- Left -->
+      <!-- Left -->
+
+      <!-- Right -->
+      <div>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+      <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold">CompuShop</h6>
+            <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+            />
+            <p>
+              The trusted online destination for computer products, accessories,
+              and tech gadgets.
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Employee Help Desk</h6>
+            <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+            />
+            <p><i class="fas fa-envelope mr-3"></i>
+              help_internal@compushop.com</p>
+            <p><i class="fas fa-print mr-3"></i> + 65 234 5678</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2025 Copyright: CompuShop
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 </html>
