sorted out footer issue for main pages

--- a/views/create_order.hbs
+++ b/views/create_order.hbs
@@ -4,7 +4,7 @@
     <h1>Create Order</h1>
 
     <form method="POST">
-      <label>Customer ID</label>
+      <label>Customer's user ID</label>
       <input type="text" name="user_id" class="form-control mb-3" />
       <p class="small text-muted">After creating this order, please add
         <a href="/order_details/create">order details</a>.</p>
