Added Users page

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -34,6 +34,13 @@
               <a
                 class="nav-link active"
                 aria-current="page"
+                href="/users"
+              >Users</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
                 href="/orders"
               >Orders</a>
             </li>
