--- a/views/create_order.hbs
+++ b/views/create_order.hbs
@@ -6,6 +6,7 @@
     <form method="POST">
       <label>Customer's user ID</label>
       <input type="text" name="user_id" class="form-control mb-3" />
+      <div id="create-order-error"></div>
       <p class="small text-muted">After creating this order, please add
         <a href="/order_details/create">order details</a>.</p>
       <input type="submit" class="btn btn-primary" value="Create Order" />
