--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>CompuShop | Orders Database</title>
   </head>
-  <body>
+  <body class>
     <nav class="mb-4 navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/order_details"><p class="display-6">
