Added delete order button without functionality

--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -23,6 +23,7 @@
       {{/each}}
     </table>
     <a href="/orders/create" class="btn btn-primary">Create Order</a>
+    <a href="/order_details/create" class="btn btn-danger">Delete Order</a>
     <a href="/order_details/create" class="btn btn-success">Add Order Detail</a>
 
   {{/block}}
