--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -9,10 +9,11 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
+
     <title>CompuShop | Orders Database</title>
   </head>
-  <body class>
+  <body>
     <nav class="mb-4 navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/order_details"><p class="display-6">
@@ -69,11 +70,6 @@
         {{#block "content"}}{{/block}}
       </div>
 
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-      ></script>
     </main>
 
     <footer
@@ -115,6 +111,11 @@
         © 2025 Copyright: CompuShop
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
   </body>
 
