--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,10 @@
 {{#extends "base"}}
-  {{#block "content"}}{{/block}}
+  {{#block "content"}}
+    <h2>Error</h2>
+    <p>{{errorMessage}}</p>
+    <button
+      onclick="window.history.back()"
+      class="btn btn-primary"
+    >Back</button>
+  {{/block}}
 {{/extends}}
