changed brand name

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -11,13 +11,14 @@
 
     <link rel="stylesheet" href="/styles.css" />
 
-    <title>CompuShop | Orders Database</title>
+    <title>Gizmo Galazy | Orders Database</title>
   </head>
   <body>
     <nav class="mb-4 navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/order_details"><p class="display-6">
-            CompuShop</p></a>
+            Gizmo Galaxy
+          </p></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -80,7 +81,7 @@
         <div class="container text-center text-md-start mt-5">
           <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold">CompuShop</h6>
+              <h6 class="text-uppercase fw-bold">G</h6>
               <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
@@ -98,7 +99,7 @@
                 style="width: 60px; background-color: #7c4dff; height: 2px"
               />
               <p><i class="fas fa-envelope mr-3"></i>
-                help_internal@compushop.com</p>
+                help_internal@gizmogalaxy.com</p>
               <p><i class="fas fa-print mr-3"></i> + 65 234 5678</p>
             </div>
           </div>
@@ -108,7 +109,7 @@
         class="text-center p-3 copyright"
         style="background-color: rgba(0, 0, 0, 0.2)"
       >
-        © 2025 Copyright: CompuShop
+        © 2025 Copyright: Gizmo Galazy
       </div>
     </footer>
     <script
