--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -81,7 +81,7 @@
         <div class="container text-center text-md-start mt-5">
           <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold">G</h6>
+              <h6 class="text-uppercase fw-bold">Gizmo Galaxy</h6>
               <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
@@ -100,7 +100,7 @@
               />
               <p><i class="fas fa-envelope mr-3"></i>
                 help_internal@gizmogalaxy.com</p>
-              <p><i class="fas fa-print mr-3"></i> + 65 234 5678</p>
+              <p><i class="fas fa-print mr-3"></i> + 65 734 5678</p>
             </div>
           </div>
         </div>
