Adjusted data.sql and products page

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -6,7 +6,7 @@
       <tr>
         <th>Product ID</th>
         <th>Name</th>
-        <th>Price</th>
+        <th>Price ($)</th>
       </tr>
 
       {{#each products}}
